--- a/.travis.yml
+++ b/.travis.yml
@@ -1,15 +1,14 @@
-language: node_js
-branches:
-  only:
-    - gh-pages
+language: generic
 script:
-  - echo "ok"
+- bash ./deploy.sh
 env:
   global:
-    - WIDLPROC_PATH=$TRAVIS_BUILD_DIR/widlproc/obj/widlproc
-    - URL="http://w3c.github.io/sensors/"
-    - DECISION="https://lists.w3.org/Archives/Public/public-device-apis/2015Oct/att-0037/minutes-2015-10-15.html#item05"
-    - secure="exHNi3GqjKX48kZf/Sy7WXKW0v0XIhtMRd4XAJhq3CMKA+1FbMl1BF3VzY5Pz9/CcLqz+i/5WnDosgxnieJOGBu3McaVina0bLDqfmn2b3crwUNNu7STZBubP7hBWSW0uRcTrFsI35PoJMVtqSphZefURGMyNtZX8SNua9ioMwE="
-
-after_success:
-  -  curl "https://labs.w3.org/echidna/api/request" --data "url=$URL" --data "decision=$DECISION" --data "token=$TOKEN"
+  - ENCRYPTION_LABEL: 110595081ba4
+  - COMMIT_AUTHOR_EMAIL: tobie@codespeaks.com
+notifications:
+  email:
+    on_success: never
+    on_failure: always
+before_install:
+- openssl aes-256-cbc -K $encrypted_110595081ba4_key -iv $encrypted_110595081ba4_iv
+  -in deploy_key.enc -out deploy_key -d
